Mobile Alignment and Focus style Fixes
- Focus styles no longer stay on touch. Now, hover/focus styles only apply for devices
  that allow hovering.
- Fixed logo allignments for safari. Parents of SVG's given styles rather
  than just SVG's.
- Fixed name centering for safari. Now use flex-box centering alignment rather than
  using text centering.

--- a/main.css
+++ b/main.css
@@ -95,17 +95,16 @@ body {
 }
 .navbar__home-container {
   border: 0;
+  /* font-family: sans-serif; */
   font-family: monospace;
-  /* font-family: monospace; */
   font-size: 1.6em;
-
-  text-align: center;
 }
 .navbar__home-container .fn {
+  align-self: center;
   letter-spacing: 0.1ch; /*first name spacing*/
 }
 .navbar__home-container .ln {
-  letter-spacing: 0.285ch; /*last name spacing*/
+  letter-spacing: 0.3ch; /*last name spacing*/
 }
 
 .navbar__parent-container {
@@ -119,15 +118,15 @@ body {
 }
 
 .navbar__collapsible-container {
-  order: 1;
+  /* order: 1; */
   display: flex;
   height: 100%;
   align-items: center;
   margin-right: 1ch;
 }
-.navbar__mode-container {
+/* .navbar__mode-container {
   order: 2;
-}
+} */
 
 .navbar__home-container,
 .navbar__items-container {
@@ -165,6 +164,7 @@ body {
   width: 0;
   height: 3ch;
 }
+
 .navbar__mode-container button {
   /* work with JS: light/dark change theme + logo. Burger opens nav for small screen and animates on click.*/
 
@@ -185,39 +185,66 @@ body {
 .navbar__home {
   white-space: nowrap; /*will not allow line breaks in name*/
 
-  margin-left: 0ch; /*overwrites nav_bar gaps between items. First item does not need it.*/
+  margin: 0; /*overwrites nav_bar gaps between items. First item does not need it.*/
 
   font-size: 1.1em;
 
   color: var(--text-color);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*logos*/
-.github {
+
+.github,
+.mob-github {
   margin-left: 1.3ch;
   stroke-width: 0%;
   scale: 1.3;
 
   width: 2ch;
 }
-.itch {
+.itch,
+.mob-itch {
   width: 2ch;
   margin-left: 1.3ch;
   scale: 1.3;
 }
 
+.github svg,
+.mob-github svg,
+.itch svg,
+.mob-itch svg {
+  width: 100%;
+}
+
+.navbar__color-mode-button,
+.navbar__burger-button {
+  width: 1ch;
+  scale: 0.5;
+}
+
+.sun,
+.moon,
+.burger {
+  width: 100%;
+}
+
 .moon {
   opacity: 1;
   display: none; /*moon initally invisible*/
-  scale: 1.5;
+  scale: 1.7;
   transition-property: fill stroke;
   transition-duration: 0.5s;
 }
 .sun {
   opacity: 1;
-  scale: 1.75;
+  scale: 2;
   transition-property: fill stroke;
 }
+
 .sun .st1 {
   /*inner circle*/
   stroke-width: 1px;
@@ -236,6 +263,7 @@ body {
   stroke-width: 0px;
   transition-duration: 0.5s; /*for hovering only.*/
 }
+
 .navbar__mode-container .navbar__burger-button {
   /*using 2 identifiers to avoid getting over-writen by more specific identifiers above.*/
 
@@ -259,40 +287,83 @@ body {
   transition-duration: 0.5s;
 }
 
-/*Hover and Focus-Visble Styles. Focus Visible allows hover styles to be applied for users who tab through elemenets in a better way than just using :focus (i.e., after clciking element, giving it focus, un-hovering will not keep the focus style there.)*/
-.navbar__item:hover,
-.navbar__item:focus-visible {
-  color: var(--text-hover-color); /*for texts*/
-  fill: var(--text-hover-color); /*for logos/svg*/
+.navbar__vertical-name-seperator {
+  display: none;
+  align-self: center;
 
-  outline-offset: 0.3ch;
-}
-.navbar__home:hover {
-  color: var(--text-hover-color); /*for texts*/
+  border-left: 2px dotted var(--text-color);
+
+  width: 0;
+  height: 3.5ch;
 }
 
-/*for navbar that have a borderbottom on hover -> items*/
-.bbottom:hover,
-.bbottom:focus-visible {
-  border-bottom: 0.1ch solid var(--text-hover-color);
-  border-bottom-left-radius: 1ch;
-  border-bottom-right-radius: 1ch;
-}
-/*for buttons: light/dark theme and mobile hamburger menu.*/
-.navbar__color-mode-button:hover .st0,
-.navbar__color-mode-button:hover .st1,
-.navbar__color-mode-button:hover .moon,
-.navbar__color-mode-button:focus-visible .st0,
-.navbar__color-mode-button:focus-visible .st1,
-.navbar__color-mode-button:focus-visible .moon {
-  fill: var(--text-hover-color); /*for logos/svg*/
-  stroke: var(--text-color);
-}
-.navbar__burger-button:hover .burger,
-.navbar__burger-button:focus-visible .burger {
-  fill: var(--text-color);
-  stroke: var(--text-hover-color);
-  stroke-width: 1px;
+@media (hover: hover) {
+  /* for devices that can hover (desktop only) */
+  /* Detects PRIMARY input method only. Mobiles cant hover even if a stylus is being used on them that allows hovering. These setles will not aply on them.*/
+
+  /*Hover and Focus-Visble Styles. Focus Visible allows hover styles to be applied for users who tab through elemenets in a better way than just using :focus (i.e., after clciking element, giving it focus, un-hovering will not keep the focus style there.)*/
+  .navbar__item:hover,
+  .navbar__item:focus-visible {
+    color: var(--text-hover-color); /*for texts*/
+    fill: var(--text-hover-color); /*for logos/svg*/
+
+    outline-offset: 0.3ch;
+  }
+
+  /*for navbar that have a borderbottom on hover -> items*/
+  .bbottom:hover,
+  .bbottom:focus-visible {
+    border-bottom: 0.1ch solid var(--text-hover-color);
+    border-bottom-left-radius: 1ch;
+    border-bottom-right-radius: 1ch;
+  }
+  /*for buttons: light/dark theme and mobile hamburger menu.*/
+  .navbar__color-mode-button:hover .st0,
+  .navbar__color-mode-button:hover .st1,
+  .navbar__color-mode-button:hover .moon,
+  .navbar__color-mode-button:focus-visible .st0,
+  .navbar__color-mode-button:focus-visible .st1,
+  .navbar__color-mode-button:focus-visible .moon {
+    fill: var(--text-hover-color); /*for logos/svg*/
+    stroke: var(--text-color);
+  }
+  .navbar__burger-button:hover .burger,
+  .navbar__burger-button:focus-visible .burger {
+    fill: var(--text-color);
+    stroke: var(--text-hover-color);
+    stroke-width: 1px;
+  }
+
+  .navbar__vertical-name-seperator {
+    all: unset;
+  }
+
+  .navbar__vertical-name-seperator {
+    display: none;
+    align-self: center;
+    /* border: 2px solid var(--text-color); */
+
+    width: 5ch;
+    /* max-width: 2px; */
+    height: 3.5ch;
+
+    background-image: linear-gradient(45deg, red, red, yellow, white);
+    background-repeat: space;
+
+    -webkit-mask-image: url("images/Seperator.svg");
+    mask-image: url("images/Seperator.svg");
+
+    background-size: 20000%;
+    background-position-x: left;
+    /* background-position-y: top; */
+
+    transition: background-position 0.5s;
+  }
+  .navbar__home-container:hover > .navbar__vertical-name-seperator,
+  .navbar__home-container:focus > .navbar__vertical-name-seperator {
+    background-position-x: right;
+    /* background-position-y: bottom; */
+  }
 }
 
 /* Burger Menu JS styles. Added onto burger menu once it is clicked on. Removed when menu is closed.*/
@@ -301,14 +372,6 @@ body {
 }
 
 /* max: applies if screen is SMALLER than a certain amount */
-
-.navbar__vertical-name-seperator {
-  display: none;
-  align-self: center;
-  border-left: 2px dotted var(--text-color);
-  width: 0;
-  height: 3.5ch;
-}
 
 /* Classes to for navbar mobile mode */
 .navbar__mob-collapsible-container {
@@ -367,7 +430,7 @@ body {
   margin: 0 0.7ch;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
   .navbar__parent-container {
     margin: 0 5ch;
   }
@@ -403,7 +466,12 @@ body {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
+  .main-wrapper {
+    width: 100%;
+  }
+}
+@media (max-width: 300px) {
   .navbar__parent-container {
     margin: 0 1ch;
   }
